<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <HorizontalScrollView
        android:id="@+id/world_map_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <ScrollView
            android:id="@+id/world_map_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/frameLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginBottom="204dp"
                    android:text="test"
                    app:layout_constraintBottom_toTopOf="@+id/inn_button"
                    app:layout_constraintStart_toStartOf="@+id/imageView"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="MissingConstraints" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/map_descriptor"
                    android:src="@drawable/bridgeton"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <Button
                    android:id="@+id/inn_button"
                    android:layout_width="160dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="278dp"
                    android:autoSizeTextType="uniform"
                    android:backgroundTint="@android:color/transparent"
                    app:layout_constraintBaseline_toBaselineOf="@+id/general_store_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/general_store_button"
                    android:contentDescription="@string/inn"/>

                <Button
                    android:id="@+id/general_store_button"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="610dp"
                    android:layout_marginTop="340dp"
                    android:layout_marginEnd="78dp"
                    android:layout_marginBottom="230dp"
                    android:autoSizeTextType="uniform"
                    android:backgroundTint="@android:color/transparent"
                    app:layout_constraintBottom_toTopOf="@+id/blacksmith_button"
                    app:layout_constraintEnd_toStartOf="@+id/inn_button"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/general_store"
                    android:tag="@string/bridgeton_general_store"/>

                <Button
                    android:id="@+id/blacksmith_button"
                    android:layout_width="130dp"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="46dp"
                    android:layout_marginBottom="424dp"
                    android:autoSizeTextType="uniform"
                    android:backgroundTint="@android:color/transparent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/inn_button"
                    app:layout_constraintTop_toBottomOf="@+id/general_store_button"
                    android:contentDescription="@string/blacksmith"
                    android:tag="@string/bridgeton_blacksmith"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>